force-app/main/default/objects/SterlingQuote__c/SterlingQuote__c.object-meta.xml
<CustomObject>
    <label>SterlingQuote</label>
    <nameField>
        <label>SterlingQuote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SterlingQuotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>