force-app/main/default/objects/SterlingQuote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SterlingQuotes</relationshipLabel>
    <relationshipName>SterlingQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>