force-app/main/default/objects/SterlingQuote__c/fields/AdditionalAddress__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAddress__c</fullName>
    <label>Additional To</label>
    <type>TextArea</type>
</CustomField>