force-app/main/default/objects/SterlingQuote__c/fields/AdditionalName__c.field-meta.xml
<CustomField>
    <fullName>AdditionalName__c</fullName>
    <label>Additional To Name</label>
    <type>TextArea</type>
</CustomField>