force-app/main/default/objects/SterlingQuote__c/fields/ApprovalType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalType__c</fullName>
    <label>ApprovalType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>SVP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>