force-app/main/default/objects/SterlingQuote__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <label>Bill To</label>
    <type>TextArea</type>
</CustomField>