force-app/main/default/objects/SterlingQuote__c/fields/BillingName__c.field-meta.xml
<CustomField>
    <fullName>BillingName__c</fullName>
    <label>Bill To Name</label>
    <type>TextArea</type>
</CustomField>