force-app/main/default/objects/SterlingQuote__c/fields/CPQQuoteId__c.field-meta.xml
<CustomField>
    <fullName>CPQQuoteId__c</fullName>
    <label>CPQQuoteId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>