force-app/main/default/objects/SterlingQuote__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SterlingQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>