force-app/main/default/objects/SterlingQuote__c/fields/ExpediteIncluded__c.field-meta.xml
<CustomField>
    <fullName>ExpediteIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExpediteIncluded</label>
    <type>Checkbox</type>
</CustomField>