force-app/main/default/objects/SterlingQuote__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>SterlingQuoteItem__c.SterlingQuote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>