force-app/main/default/objects/SterlingQuote__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Quote Name</label>
    <type>TextArea</type>
</CustomField>