force-app/main/default/objects/SterlingQuote__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SterlingQuotes</relationshipLabel>
    <relationshipName>SterlingQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>