force-app/main/default/objects/SterlingQuote__c/fields/QuoteToAddress__c.field-meta.xml
<CustomField>
    <fullName>QuoteToAddress__c</fullName>
    <label>QuoteTo</label>
    <type>TextArea</type>
</CustomField>