force-app/main/default/objects/SterlingQuote__c/fields/QuoteToName__c.field-meta.xml
<CustomField>
    <fullName>QuoteToName__c</fullName>
    <label>Quote To Name</label>
    <type>TextArea</type>
</CustomField>