force-app/main/default/objects/SterlingQuote__c/fields/SFAQuoteId__c.field-meta.xml
<CustomField>
    <fullName>SFAQuoteId__c</fullName>
    <label>SFAQuoteId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>