force-app/main/default/objects/SterlingQuote__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>Ship To</label>
    <type>TextArea</type>
</CustomField>