force-app/main/default/objects/SterlingQuote__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>SterlingQuoteItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>SterlingQuoteItem__c.SterlingQuote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>