force-app/main/default/objects/SterlingQuote__c/recordTypes/SFA.recordType-meta.xml
<RecordType>
    <fullName>SFA</fullName>
    <active>true</active>
    <label>SFA</label>
</RecordType>