force-app/main/default/objects/SterlingQuote__c/recordTypes/Sterling.recordType-meta.xml
<RecordType>
    <fullName>Sterling</fullName>
    <active>true</active>
    <label>Sterling</label>
</RecordType>