force-app/main/default/objects/SterlingQuote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ApprovalType__c</columns>
    <columns>CPQQuoteId__c</columns>
    <columns>SFAQuoteId__c</columns>
    <columns>QuoteType__c</columns>
    <columns>SubmittedBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>